ocaml/testsuite/tests/typing-layouts/invalid_integer_literals.compilers.reference

Line 6, characters 45-47:
6 | let unboxed_integers_must_have_a_modifier = #42
                                                 ^^
Error: Syntax error: integer literal with type-specifying suffix expected.

