ocaml/testsuite/tests/typing-layouts/invalid_integer_literals.ml
(* TEST
 flags = "-extension-universe alpha";
 toplevel;
*)

let unboxed_integers_must_have_a_modifier = #42
